--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,8 +1,5 @@
-<h1>Home</h1>
-<p>This is the home pages</p>
-
-
-
+    <h1>Home</h1>
+    <p>This is the home pages</p>
     <% if logged_in? %>
       <% if current_user.kind == "seller" %>
          <p> You are seller </p> 
@@ -12,9 +9,9 @@
                  <h3> Request is pending </h3>
             <% elsif current_user.requested == "rejected" %>
      		     <b> You're Buyer,rejected because <%= current_user.requests.last.reason %></b>
-                <br> <%= link_to "become a seller", "/requests/new" %> </br>
+                 <br> <%= link_to "become a seller",{:controller => 'requests', :action =>'create'}, method: :post, data: {confirm: 'U sure ?'} %> </br>
             <% elsif current_user.requested == nil %>
-                <%= link_to "become a seller", "/requests/new" %>
+                <%= link_to "become a seller",{:controller => 'requests', :action =>'create'}, method: :post, data: {confirm: 'U sure ?'} %>
           <% end %>
         <% end %>
     <% end %>   
